# SuKoon-AI

./: .gitignore  README.md  pyproject.toml
backend/: agent.py  config.py  main.py  prompts.py
backend/tools/: ask_tool.py  emergency_call_tool.py  location_tool.py
frontend/: front.py
